--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
 <body>
     <div id="app">
         <!-- Navigation -->
-        <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-        <nav id="sidebar-wrapper">
+        <a id="menu-toggle" href="javascript:void(0)" class="btn btn-dark btn-lg toggle" @click="setMenu()"><i class="fa fa-bars"></i></a>
+        <nav id="sidebar-wrapper" :class="{active:status.menu}">
             <ul class="sidebar-nav">
-                <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+                <a id="menu-close" href="javascript:void(0)" class="btn btn-light btn-lg pull-right toggle" @click="setMenu()"><i class="fa fa-times"></i></a>
                 <li class="sidebar-brand">
-                    <a href="#top">Onion Lian</a>
+                    <a href="#" @click.prevent="animateTo('top')">Onion Lian</a>
                 </li>
                 <li>
-                    <a href="#top">Home</a>
+                    <a href="#" @click.prevent="animateTo('top')">Home</a>
                 </li>
                 <li>
-                    <a href="#about">About</a>
+                    <a href="#" @click.prevent="animateTo('about')">About</a>
                 </li>
                 <li>
-                    <a href="#services">Services</a>
+                    <a href="#" @click.prevent="animateTo('services')">Services</a>
                 </li>
                 <li>
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="#" @click.prevent="animateTo('portfolio')">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#" @click.prevent="animateTo('contact')">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -57,7 +57,7 @@
                 <h1>Start Bootstrap</h1>
                 <h3>Free Bootstrap Themes &amp; Templates</h3>
                 <br>
-                <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+                <a href="#" @click.prevent="animateTo('about')" class="btn btn-dark btn-lg">Find Out More</a>
             </div>
         </header>
         <!-- About -->
@@ -79,18 +79,17 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-10 col-lg-offset-1">
-                        <h2>Our Services</h2>
+                        <h2>My Skills</h2>
                         <hr class="small">
                         <div class="row">
-                            <div class="col-md-3 col-sm-6" v-for="service in services">
+                            <div class="col-md-3 col-sm-6" v-for="skill in my.skills">
                                 <div class="service-item">
                                     <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-stack-1x text-primary" :class="skill.i"></i>
                             </span>
-                                    <h4><strong v-text="service.name"></strong></h4>
-                                    <p v-text="service.p"></p>
-                                    <a :href="service.link" class="btn btn-light">Learn More</a>
+                                    <h4><strong v-text="skill.name"></strong></h4>
+                                    <p v-text="skill.p"></p>
                                 </div>
                             </div>
                         </div>
@@ -116,32 +115,13 @@
                         <h2>Our Work</h2>
                         <hr class="small">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6" v-for="(work,index) in my.works">
                                 <div class="portfolio-item">
-                                    <a href="#">
-                                        <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <a :href="work.link">
+                                        <img class="img-portfolio img-responsive" :src="'img/portfolio-'+index+'.jpg'">
                                     </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="portfolio-item">
-                                    <a href="#">
-                                        <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="portfolio-item">
-                                    <a href="#">
-                                        <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="portfolio-item">
-                                    <a href="#">
-                                        <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-                                    </a>
+                                    <h4 v-text="work.title"></h4>
+                                    <span :class="tag" v-for="tag in work.tags" v-text="tag"></span>
                                 </div>
                             </div>
                         </div>
@@ -166,14 +146,6 @@
                 </div>
             </div>
         </aside>
-        <!-- Map -->
-        <section id="contact" class="map">
-            <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-            <br />
-            <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-        </section>
         <!-- Footer -->
         <footer>
             <div class="container">
@@ -205,7 +177,7 @@
                     </div>
                 </div>
             </div>
-            <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+            <a id="to-top" href="#top" class="btn btn-dark btn-lg" :class="{show:status.toTop}"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
         </footer>
     </div>
     <!-- jQuery -->
