--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <!-- Header -->
         <header id="top" class="header">
             <div class="text-vertical-center">
-                <h1>Start Bootstrap</h1>
-                <h3>Free Bootstrap Themes &amp; Templates</h3>
+                <h1>Onion Lian</h1>
+                <h3>Back-end Developer &amp;<br> Front-end Developer</h3>
                 <br>
                 <a href="#" @click.prevent="animateTo('about')" class="btn btn-dark btn-lg">Find Out More</a>
             </div>
@@ -65,8 +65,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                        <h2>About</h2>
+                        <p class="lead">All people can change, can be happy, to live life in the moment<br>所有的人都能改變、都能幸福、都要活在當下</p>
                     </div>
                 </div>
                 <!-- /.row -->
@@ -101,18 +101,12 @@
             </div>
             <!-- /.container -->
         </section>
-        <!-- Callout -->
-        <aside class="callout">
-            <div class="text-vertical-center">
-                <h1>Vertically Centered Text</h1>
-            </div>
-        </aside>
         <!-- Portfolio -->
         <section id="portfolio" class="portfolio text-center">
             <div class="container portfolio-list" :class="{'show-more':status.listMore}">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 ">
-                        <h2>Our Work</h2>
+                        <h2>My Works</h2>
                         <hr class="small">
                         <div class="row">
                             <div class="col-md-6 div-work" v-for="(work,index) in my.works">
@@ -131,7 +125,7 @@
                 </div>
                 <!-- /.row -->
             </div>
-            <a href="javascript:void(0)" class="portfolio-more btn btn-dark" v-show="!status.listMore" @click="status.listMore=true">View More Items</a>
+            <a href="javascript:void(0)" class="portfolio-more btn btn-dark" v-show="!status.listMore" @click="status.listMore=true">View More Works</a>
             <!-- /.container -->
         </section>
         <!-- Call to Action -->
@@ -139,41 +133,30 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h3>The buttons below are impossible to resist.</h3>
-                        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                        <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                        <h3>Need Developer? Contact Me!</h3>
+                        <a href="mailto:onininonjob@gmail.com" class="btn btn-lg btn-light">Send Email</a>
                     </div>
                 </div>
             </div>
         </aside>
         <!-- Footer -->
-        <footer>
+        <footer id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <h4><strong>Start Bootstrap</strong>
+                        <h4><strong>Contact Onion Lian</strong>
                     </h4>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p><a href="https://www.google.com.tw/maps/place/220新北市板橋區/"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Banqiao District, New Taipei (City) 220 Taiwan, ROC </p>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
+                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:onininonjob@gmail.com">onininonjob@gmail.com</a>
                             </li>
                         </ul>
                         <br>
                         <ul class="list-inline">
                             <li>
-                                <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=100000199204563"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                             </li>
                         </ul>
-                        <hr class="small">
-                        <p class="text-muted">Copyright &copy; Your Website 2014</p>
                     </div>
                 </div>
             </div>
