--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     <a href="#" @click.prevent="animateTo('about')">About</a>
                 </li>
                 <li>
-                    <a href="#" @click.prevent="animateTo('services')">Services</a>
+                    <a href="#" @click.prevent="animateTo('services')">Skills</a>
                 </li>
                 <li>
-                    <a href="#" @click.prevent="animateTo('portfolio')">Portfolio</a>
+                    <a href="#" @click.prevent="animateTo('portfolio')">Works</a>
                 </li>
                 <li>
                     <a href="#" @click.prevent="animateTo('contact')">Contact</a>
