--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link href="css/my.css" rel="stylesheet">
+    <link href="css/my.css?0206" rel="stylesheet">
 </head>
 
 <body>
