--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -112,10 +113,8 @@
                             <div class="col-md-6 div-work" v-for="(work,index) in my.works">
                                 <h4 v-text="work.title"></h4>
                                 <span class="work-tag" :class="tag | lowercase" v-for="tag in work.tags" v-text="tag"></span>
-                                <div class="portfolio-item">
-                                    <a :href="work.link">
-                                        <img class="img-portfolio img-responsive" :src="'img/portfolio-'+(my.works.length-index)+'.jpg'">
-                                    </a>
+                                <div class="portfolio-item" @click="showModalWork(index)">
+                                    <img class="img-portfolio img-responsive" :src="'img/portfolio-'+(workCount-index)+'.jpg'">
                                 </div>
                             </div>
                         </div>
@@ -162,6 +161,26 @@
             </div>
             <a id="to-top" href="#" class="btn btn-dark btn-lg" :class="{show:status.toTop}" @click="animateTo('top')"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
         </footer>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content" v-if="modalWork">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="exampleModalLabel" v-text="modalWork.title"></h4>
+                        <a :class="{dead:modalWork.dead}" :href="modalWork.link" target="_blank" v-text="modalWork.link"></a> <span v-show="modalWork.dead"> 網站已關閉</span>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p v-text="modalWork.detail"></p>
+                        <img class="img-responsive" v-if="workCount" :src="'img/portfolio-'+(workCount-modalIndex)+'.jpg'">
+                    </div>
+                    <div class="modal-footer">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
