--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         j.src =
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TR682QS');
+    })(window, document, 'script', 'dataLayer', 'GTM-MRWCBC6');
     </script>
     <!-- End Google Tag Manager -->
     <link href="css/my.css?0206" rel="stylesheet">
@@ -51,7 +51,7 @@
 <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR682QS" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MRWCBC6" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="app">
