--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/vue.js"></script>
     <script src="js/my.js"></script>
+    <!-- Live Chat Widget powered by https://keyreply.com/chat/ -->
+    <!-- Advanced options: -->
+    <!-- data-align="left" -->
+    <!-- data-overlay="true" -->
+    <script data-align="right" data-overlay="false" id="keyreply-script" src="//keyreply.com/chat/widget.js" data-color="#E4392B" data-apps="JTdCJTIybGluZSUyMjolMjJvbmluaW5vbiUyMiwlMjJ3ZWNoYXQlMjI6JTIyb25pbmlub25qb2IlMjIsJTIyc2t5cGUlMjI6JTIyb25pbmlub24lMjIsJTIyZmFjZWJvb2slMjI6JTIyMTAwMDAwMTk5MjA0NTYzJTIyLCUyMmVtYWlsJTIyOiUyMm9uaW5pbm9uam9iQGdtYWlsLmNvbSUyMiU3RA=="></script>
 </body>
 
 </html>
