--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/vue.js"></script>
-    <script src="js/my.js"></script>
+    <script src="js/my.js?0820"></script>
     <!-- Live Chat Widget powered by https://keyreply.com/chat/ -->
 <!-- Advanced options: -->
 <!-- data-align="left" -->
